<resources>
    <string name="app_name">CIT Final Progect</string>

    <string name="conditions">I agree terms and conditions.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="option_1">Purchase Entry</string>
    <string name="option_2">Sales Entry</string>
    <string name="option_3">Vendor Details</string>
    <string name="option_4">Customer Details</string>
    <string name="option_5">Product List</string>
    <string name="option_6">Stock on Hand</string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="connection_text">Please Check Internet Connection...</string>

</resources>
